[package]
name = "ipfs"
description = "An experimental implementation of various IPFS components."
version = "0.0.1"
authors = ["Micxjo Funkcio <micxjo@fastmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/micxjo/rs-ipfs"
repository = "https://github.com/micxjo/rs-ipfs"
keywords = ["networking", "protocol", "web"]

[dependencies]
protobuf = "^1.0.18"
libc = "^0.2.7"
clippy = { version = "*", optional = true }

[dependencies.openssl]
version = "^0.7.6"
features = ["aes_ctr"]

[features]
default = []
