[package]
name = "ipfs"
description = "An experimental implementation of various IPFS components."
version = "0.0.1"
authors = ["Micxjo Funkcio <micxjo@fastmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/micxjo/rust-ipfs"
repository = "https://github.com/micxjo/rust-ipfs"
keywords = ["networking", "protocol", "web"]

[[bin]]
name = "ipfs"
doc = false

[dependencies]
byteorder = "^0.4.2"
rand = "^0.3.14"
rust-base58 = "^0.0.4"
log = "^0.3.5"
protobuf = "^1.0.18"
libc = "^0.2.7"
multiaddr = { git = "https://github.com/micxjo/rust-multiaddr.git" }
clippy = { version = "*", optional = true }

[dependencies.openssl]
version = "^0.7.6"
features = ["aes_ctr"]

[features]
default = []
